content/consul/v1.11.x/content/commands/kv/import.mdx
---
layout: commands
page_title: 'Commands: KV Import'
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-11-04T10:42:51-06:00
last_modified: 2025-11-04T10:42:51-06:00
# END AUTO GENERATED METADATA
---

# Consul KV Import

Command: `consul kv import`

The `kv import` command is used to import KV pairs from the JSON representation
generated by the `kv export` command.

The table below shows this command's [required ACLs](/api#authentication). Configuration of
[blocking queries](/api-docs/features/blocking) and [agent caching](/api-docs/features/caching)
are not supported from commands, but may be from the corresponding HTTP endpoint.

| ACL Required |
| ------------ |
| `key:write`  |

## Usage

Usage: `consul kv import [options] [DATA]`

#### API Options

@include 'http_api_options_client.mdx'

@include 'http_api_options_server.mdx'

#### KV Import Options

- `-prefix` - Key prefix for imported data. The default value is empty meaning
  root. Added in Consul 1.10.

#### Enterprise Options

@include 'http_api_namespace_options.mdx'

@include 'http_api_partition_options.mdx'

## Examples

To import from a file, prepend the filename with `@`:

```shell-session
$ consul kv import @values.json
# Output
```

To import from stdin, use `-` as the data parameter:

```shell-session
$ cat values.json | consul kv import -
# Output
```

You can also pass the JSON directly, however care must be taken with shell
escaping:

```shell-session
$ consul kv import "$(cat values.json)"
# Output
```

To import under prefix, use `-prefix` option:

```shell-session
$ cat values.json | consul kv import -prefix=sub/dir/ -
# Output
```
